// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic tests Empty string 1`] = `
<h1
  className="sc-bdfCDU iEnzuz"
>
  Hello world
</h1>
`;

exports[`Basic tests Simple string 1`] = `
<h1
  className="sc-bdfCDU iEnzuz"
>
  One simple string
</h1>
`;
